# slasher

./: .gitignore  Cargo.toml  index.html  my_bevy_game.js  slasher.js
src/: main.rs
web/: index.html
