[package]
name = "slasher"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"
itertools =  "0.11"
wasm-bindgen = "0.2.87"
instant = "0.1.12"
custom-print = "1.0.0"
clap = { version = "4.4.2", features = ["derive"] }
bevy_rapier2d = "0.32.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Smaller binaries on release
[profile.release]
opt-level = 'z'
lto = "thin"
codegen-units = 1
